# Measure_salamander_colors.gui

./: Measure_salamander_color.py  pyproject.toml
.github/workflows/: windows.yml
src/itaxotools/__pyinstaller/: hook-itaxotools.salamander_colors.py
src/itaxotools/salamander_colors/: __init__.py  config.py  main.py  measure.py  resources.py
src/itaxotools/salamander_colors/tasks/common/: model.py  types.py  view.py  widgets.py
src/itaxotools/salamander_colors/tasks/measure/: __init__.py  model.py  process.py  types.py  view.py
tests/: Salamander_color_results.tsv
tools/: config.sh  run.py
tools/specs/: windows.spec
